[maven] IDEA-313767 Maven4Support
GitOrigin-RevId: ef9526710aa9ba4f731de813d8a47405aabd0271